Fixed some spacing in the SinglePost.html view.

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -530,6 +530,7 @@ input#hide-comment:checked ~ div#content-comments{
     box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.75);
     margin-bottom: 30px;
     display: flex;
+    overflow: hidden;
 }
 
 .posts-preview:hover{
@@ -570,6 +571,8 @@ input#hide-comment:checked ~ div#content-comments{
 
 
 #post-content-container {
+    min-width: 100%;
+    max-width: 100%;
     padding: 30px;
 }
 
@@ -580,6 +583,8 @@ input#hide-comment:checked ~ div#content-comments{
 }
 
 #content-comments-in-singe-post {
+    min-width: 80%;
+    max-width: 80%;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -598,6 +603,9 @@ input#hide-comment:checked ~ div#content-comments{
     margin-top: 30px;
 }
 
+.single-post-content-container{
+    padding: 30px;
+}
 
 /*++++++++++++++++++++++++++++++++++*/
 
